fix : transparent color on dashboard body scrollbar

--- a/style/globals.css
+++ b/style/globals.css
@@ -104,7 +104,3 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
-
-.bg-scrollbar::-webkit-scrollbar-track {
-  background: #1c1c1c;
-}
